--- a/tcl-theme/core/css/styles.css
+++ b/tcl-theme/core/css/styles.css
@@ -20,11 +20,5 @@
 /* gradient of the header color and a brighter shade */
 /* can also be a flat color or an image */
 #body-login {
-	background-image: url("../img/background.jpg") !important;
-   background-image: url("../img/background.jpg"); /* path to image */
-   background-position: 50% 50%; /* ensure optimal scalability */
-   background-repeat: no-repeat; /* prevent tiled background */
-   background-size: cover; /* ensure screen coverage */
-   text-align: center; /* Center Entitlement text, copyright */
-   background-color: #000000 !important; /* Fallback for old browsers */
+   background-image: url("../img/background.jpg");
 }
